<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:elevation="2dp"
            android:src="@drawable/success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/register_success_cong"
            app:fontFamily="@font/noto_sans_bold"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/register_title_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:lineSpacingExtra="5dp"
            android:text="@string/register_success_msg"
            app:fontFamily="@font/noto_sans_bold"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/dialog_message_size" />

        <Button
            android:id="@+id/btnRegisterDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/curve_button_colorprimary"
            android:text="@string/register_success_start_now"
            app:fontFamily="@font/noto_sans_bold"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textStyle="bold"/>

    </LinearLayout>

</LinearLayout>