<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ui.EmailRegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:elevation="2dp"
            android:src="@drawable/register" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/register_title"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/register_title_size"
            app:fontFamily="@font/noto_sans_bold"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:lineSpacingExtra="5dp"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/register_email_message"
            android:textAlignment="center"
            app:fontFamily="@font/noto_sans"
            android:textSize="@dimen/register_message_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rectangle_border_grey_fill"
            android:elevation="2dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="25dp"
            android:paddingBottom="25dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_border_grey"
                android:hint="@string/register_email_hint"
                app:fontFamily="@font/noto_sans_bold"
                android:padding="15dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="@dimen/register_hint_size"
                android:maxLines="1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/curve_button_colorprimary"
                android:text="@string/register_continue"
                app:fontFamily="@font/noto_sans_bold"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>