<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:context=".ui.DMT.SenderSearchActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imgSenderSearchBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:background="@drawable/ic_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/sender_search_title"
            app:fontFamily="@font/noto_sans_bold"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/actionbar_title_size"
            android:textStyle="bold" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/ic_wallet" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorGrey" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/edtSenderSearchMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/common_20_size"
                android:inputType="number"
                android:fontFamily="@font/noto_sans_bold"
                android:focusable="false"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="10dp"
                android:maxLength="10"
                android:lines="1"
                android:hint="@string/add_sender_mobile" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnSenderSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/curve_button_colorprimary"
            android:text="@string/str_search"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/btn_small_text_size"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"/>

    </LinearLayout>

</LinearLayout>